Adding Cards for the 5 Day Forecast

--- a/index.html
+++ b/index.html
@@ -51,8 +51,47 @@
       <div class="UV-Index">UV Index:</div>
     </div>
     </section>
-    <div class="row">
-      <h2>Hello</h2>
+    <div class="card-columns">
+      <div class="card text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>Date</p>
+          <p>Pic</p>
+          <p>Temp</p>
+          <p>Humidity</p>
+        </blockquote>
+      </div>
+      <div class="card text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>Date</p>
+          <p>Pic</p>
+          <p>Temp</p>
+          <p>Humidity</p>
+        </blockquote>
+      </div>
+      <div class="card text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>Date</p>
+          <p>Pic</p>
+          <p>Temp</p>
+          <p>Humidity</p>
+        </blockquote>
+      </div>
+      <div class="card text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>Date</p>
+          <p>Pic</p>
+          <p>Temp</p>
+          <p>Humidity</p>
+        </blockquote>
+      </div>
+      <div class="card text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>Date</p>
+          <p>Pic</p>
+          <p>Temp</p>
+          <p>Humidity</p>
+        </blockquote>
+      </div>
     </div>
   </div>
  
