Starting the JS File Function

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   
     <div class="card" style="width: 18rem;">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">Los Angeles</li>
+        <li class="list-group-item">New York</li>
+        <li class="list-group-item">Chicago</li>
+        <li class="list-group-item">Atlanta</li>
+        <li class="list-group-item">Nashville</li>
+        <li class="list-group-item">Las Vegas</li>
       </ul>
     </div>
   </div>
