--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <p>Date</p>
-          <p>Pic</p>
-          <p>Temp</p>
-          <p>Humidity</p>
+          <div class="temp-results">
+          </div>
         </blockquote>
       </div>
       <div class="card text-center p-3">
@@ -128,8 +126,8 @@
 </section> -->
 
 
-
-</body>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+</body>
 <script src='index.js'></script>
 </html>
