Finished First Weather Grrid

--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@
     <div class="card-columns">
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <p>Date</p>
-          <p>Pic</p>
-          <p>Temp</p>
-          <p>Humidity</p>
+          <div class="temp-results">
         </blockquote>
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <div class="temp-results">
+          <div class="temp-results-one">
           </div>
         </blockquote>
       </div>
