Updated the 5-Day Forecast

--- a/index.html
+++ b/index.html
@@ -54,37 +54,31 @@
     <div class="card-columns">
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <div class="temp-results">
+          <div class="temp-results-one">
         </blockquote>
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <div class="temp-results-one">
+          <div class="temp-results-two">
           </div>
         </blockquote>
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <p>Date</p>
-          <p>Pic</p>
-          <p>Temp</p>
-          <p>Humidity</p>
+          <div class="temp-results-three">
+          </div>
         </blockquote>
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <p>Date</p>
-          <p>Pic</p>
-          <p>Temp</p>
-          <p>Humidity</p>
+          <div class="temp-results-four">
+          </div>
         </blockquote>
       </div>
       <div class="card text-center p-3">
         <blockquote class="blockquote mb-0">
-          <p>Date</p>
-          <p>Pic</p>
-          <p>Temp</p>
-          <p>Humidity</p>
+          <div class="temp-results-five">
+          </div>
         </blockquote>
       </div>
     </div>
