Updating Weather Dashboard

--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
     <div class="col-8">
       <br>
       <section class="jumbotron">
-        <h2>Hello</h2>
+        <h2 class ="hello">Hello</h2>
         <div class="container">
           <h2 class="city"></h2>
           <div class="Temp">Temperature:</div>
           <div class="Humidity">Humidity:</div>
           <div class="Wind-Speed">Wind Speed:</div>
-          <div class="UV-Index">UV Index:</div>
         </div>
       </section>
 
