--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="input-group mx-sm-3 mb-3">
           <form class="input-group" style="width: 18rem;">
-            <input type="text" class="form-control" placeholder="">
+            <input type="text" class="form-control" placeholder="Search" id="search-field">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
           </form>
         </div>
