--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
           <form class="input-group" style="width: 18rem;">
             <input type="text" class="form-control" placeholder="Search" id="search-field">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+            <button class="btn btn-outline-secondary" type="button" id="clear">Clear</button>
           </form>
         </div>
 
         <div class="card" style="width: 18rem;">
           <ul class="list-group list-group-flush">
-            <li class="btn list-group-item" type="button">Los Angeles</li>
-            <li class="btn list-group-item" type="button">New York</li>
+            <li type="button" class="btn list-group-item">
+              Los Angeles</li>
+            <!-- <li class="btn list-group-item" type="button"></li>
             <li class="btn list-group-item" type="button">Chicago</li>
             <li class="btn list-group-item" type="button">Atlanta</li>
             <li class="btn list-group-item" type="button">Nashville</li>
-            <li class="btn list-group-item" type="button">Las Vegas</li>
+            <li class="btn list-group-item" type="button">Las Vegas</li> -->
           </ul>
         </div>
       </div>
@@ -47,7 +49,7 @@
     <div class="col-8">
       <br>
       <section class="jumbotron">
-        <h2 class ="hello">Hello</h2>
+        <h2 class ="hello"></h2>
         <div class="container">
           <h2 class="city"></h2>
           <div class="Temp">Temperature:</div>
