--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">Weather Dashboard</a>
+    <a class="navbar-brand">Weather Dashboard</a>
   </nav>
 
   <!-- <section class="container"> -->
